kernel/tests/data/invalid/may_or_may_not_be_prop.ck
data Invalid.{u} : Sort u where